Fix: Text changes Add liquidity loading footer

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -422,8 +422,10 @@
         "max": "Max",
         "selectToken": "Select a token",
         "addLiquidity": "Add liquidity",
-        "preparingUTXO": "UTXO prepared",
+        "UTXOPrepared": "UTXO prepared",
+        "preparingUTXO": "Preparing UTXO",
         "addingLiquidity": "Adding liquidity",
+        "liquidityAdded": "Liquidity added",
         "selectInputTokens": "Select tokens and enter amounts to swap",
         "back": "Back",
         "input": "Input",
