--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -402,7 +402,8 @@
         "decentralizedInterfaceInfo": "Transact directly with the blockchain from your app, without ever touching a server.",
         "poweredLiquidityPools": "Powered by liquidity pools",
         "poweredLiquidityPoolsInfo": "Swaps are fulfilled via automated liquidity pools, not centralized order books.",
-        "continue": "Continue"
+        "continue": "Continue",
+        "swaping": "Swaping"
       },
       "swapTab": {
         "from": "From",
