Add ru, fr, de transalations for new create wallet mnemonic game

--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -505,6 +505,10 @@
         "title": "Wallet - Create a new wallet",
         "createANewWallet": "Create a new wallet",
         "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact order as displayed. This 24 - word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
+        "mnemonicGuidelineWarning": "Do not store your wallet receovery phrase on a computer or smartphone, and keep it secure.",
+        "walletRecoveryInfoLine1": "A wallet recovery seed (“mnemonic seed”, “seed phrase”, “seed words”) is a way to represent your private key as a sequence of words that are easier for a human to remember. It is also used to generate extended keys for all the wallets you create in the app.",
+        "walletRecoveryInfoLine2": "The words are randomly-generated from a list of 2048 words defined in the BIP39 standard, and provides 24 bit of safety.",
+        "learnMoreAtBitcoinBtn": "LEARN MORE AT BITCOIN WIKI",
         "generateNewSet": "Generate a new set of 24 words",
         "copied24Words": "I've have copied down 24 words in the exact order",
         "continue": "Continue",
@@ -515,8 +519,14 @@
         "title": "Wallet - Verify mnemonic seed",
         "verifyMnemonicSeed": "Verify mnemonic seed",
         "verifyMnemonicGuideline": "To ensure you have written down your 24-word mnemonic seed, please pick out 6 of the words in your mnemonic seed, in the list below.",
+        "verifyMnemonicWhichOne": "Which one is…",
+        "wordQuestion": "Word %{wordNum}?",
         "showAgain": "Show me my 24 words again",
         "creatingYourWallet": "Creating your wallet",
+        "skipVerificationTextHeader": "Skip at your own risk",
+        "skipVerificationText": "Please ensure you have written down your 24-word wallet recovery seed, in the correct order. Without your wallet recovery seed, you will not be able to recover your wallet or restore it again.",
+        "dontSkip": "Don't skip verification",
+        "skip": "Skip",
         "backToWalletPage": "CLOSE"
       },
       "restoreWalletPage": {
