--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -350,6 +350,10 @@
         "title": "Кошелек - Создать новый кошелек",
         "createANewWallet": "Создать новый кошелек",
         "mnemonicGuideline": "Запишите следующие 24 слова. Важно записывать их в том порядке, в котором они отображаются. Эта мнемоническая фраза из 24 слов будет использоваться для восстановления или передачи вашего кошелька. Без неё вы не сможете восстановить свой кошелек. Не теряйте её.",
+        "mnemonicGuidelineWarning": "Do not store your wallet receovery phrase on a computer or smartphone, and keep it secure.",
+        "walletRecoveryInfoLine1": "A wallet recovery seed (“mnemonic seed”, “seed phrase”, “seed words”) is a way to represent your private key as a sequence of words that are easier for a human to remember. It is also used to generate extended keys for all the wallets you create in the app.",
+        "walletRecoveryInfoLine2": "The words are randomly-generated from a list of 2048 words defined in the BIP39 standard, and provides 24 bit of safety.",
+        "learnMoreAtBitcoinBtn": "LEARN MORE AT BITCOIN WIKI",
         "generateNewSet": "Создайте новый набор из 24 слов",
         "copied24Words": "Я скопировал 24 слова в точном порядке",
         "continue": "ПРОДОЛЖИТЬ",
@@ -360,8 +364,14 @@
         "title": "Кошелек - Проверить мнемоническую фразу",
         "verifyMnemonicSeed": "Проверить мнемоническую фразу",
         "verifyMnemonicGuideline": "Чтобы убедиться, что вы записали мнемоническую фразу из 24 слов, выберите 6 слов мнемонической фразы в списке ниже.",
+        "verifyMnemonicWhichOne": "Which one is…",
+        "wordQuestion": "Word %{wordNum}?",
         "showAgain": "Показать 24 слова еще раз",
         "creatingYourWallet": "Создание кошелька",
+        "skipVerificationTextHeader": "Skip at your own risk",
+        "skipVerificationText": "Please ensure you have written down your 24-word wallet recovery seed, in the correct order. Without your wallet recovery seed, you will not be able to recover your wallet or restore it again.",
+        "dontSkip": "Don't skip verification",
+        "skip": "Skip",
         "backToWalletPage": "ЗАКРЫТЬ"
       },
       "restoreWalletPage": {
