--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -40,7 +40,8 @@
     "blockChainPage": {
       "blockChainPage": {
         "title": "Blockchain – Client Blockchain DeFi",
-        "blockchain": "Blockchain"
+        "blockchain": "Blockchain",
+        "explorer": "Explorer"
       },
       "blockChainTable": {
         "height": "Hauteur",
