--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -580,6 +580,11 @@
     "restartWalletModalHeader": "Требуется перезагрузка",
     "restartWalletWarningNotice": "Вам необходимо перезапустить приложение DeFi. Вы хотите перезапустить?",
     "yesRestartWalletNotice": "Перезагрузить сейчас",
-    "noRestartWalletNotice": "Позже"
+    "noRestartWalletNotice": "Позже",
+    "resetWalletNoticeTitle": "Reset Wallet",
+    "resetWalletDatNotice": "Are you sure you want to reset?",
+    "confirmResetWalletText": "To confirm reset wallet, type '%{text}' in the field.",
+    "yeResetpWalletNotice": "Yes",
+    "noResetWalletNotice": "No"
   }
 }
