Text changes in Available list pool pairs

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -268,7 +268,8 @@
         "pair": "Pair",
         "liquidity": "Liquidity",
         "volume": "Volume",
-        "apy": "APY"
+        "apy": "APY",
+        "totalLiquidity": "Total Liquidity ( USD )"
       },
       "addLiquidity": {
         "balance": "Balance",
