--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -418,7 +418,8 @@
         "pair": "Pair",
         "liquidity": "Liquidity",
         "volume": "Volume",
-        "apy": "APY"
+        "apy": "APY",
+        "totalLiquidity": "Total Liquidity ( USD )"
       },
       "addLiquidity": {
         "balance": "Balance",
