Add tooltip on liquidity table column header APY for more information to user (#47)
Co-authored-by: Harsh Rathi <fullstackninja864@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -269,6 +269,7 @@
         "liquidity": "Liquidity",
         "volume": "Volume",
         "apy": "APY",
+        "apyTooltipMessage": "APY indicated here only includes DFI incentives, without commission. Actual APY with commission is thus, more",
         "totalLiquidity": "Total Liquidity ( USD )"
       },
       "addLiquidity": {
