--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -341,7 +341,8 @@
         "volume": "Volume",
         "apy": "APY",
         "back": "BACK",
-        "addLiquidity": "Add liquidity"
+        "addLiquidity": "Add liquidity",
+        "txHash": "Transaction Hash"
       },
       "liquidityInfo": {
         "title": "Liquidity – DeFi app",
@@ -403,7 +404,8 @@
         "poweredLiquidityPools": "Powered by liquidity pools",
         "poweredLiquidityPoolsInfo": "Swaps are fulfilled via automated liquidity pools, not centralized order books.",
         "swaping": "Swapping",
-        "amountInsufficient": "Insufficient Amount in your account"
+        "amountInsufficient": "Insufficient Amount in your account",
+        "txHash": "Transaction Hash"
       },
       "swapTab": {
         "from": "From",
@@ -585,7 +587,8 @@
         "transactionSuccessMsg": "Transaction successful. Your wallet balance will update once the transaction has been confirmed by the DeFi Blockchain.",
         "backToWallet": "Back to wallet",
         "dfiAddress": "DFI Address",
-        "pleaseTransferFunds": "Please transfer some DFIs to your account"
+        "pleaseTransferFunds": "Please transfer some DFIs to your account",
+        "txHash": "Transaction Hash"
       },
       "receivePage": {
         "receiveDFITitle": "Receive DFI – DeFi app",
