Feature/wallet design (#52)
* Integrated new wallet txns design

* Added some checks for reward and swap category

* Add transactions associated with tokens

Co-authored-by: Saurabh Shinde <saurabhshinde391@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -622,6 +622,7 @@
         "uRI": "URI"
       },
       "walletPage": {
+        "includeRewards": "Include Rewards",
         "walletDefiClient": "Brieftasche – DeFi Blockchain-Client",
         "wallet": "Brieftasche",
         "delete": "Löschen",
