--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -618,6 +618,7 @@
         "uRI": "URI"
       },
       "walletPage": {
+        "includeRewards": "Include Rewards",
         "walletDefiClient": "Portefeuille – Client Blockchain DeFi",
         "wallet": "Portefeuille",
         "delete": "Effacer",
