Fix Filter rewards feature

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -217,7 +217,6 @@
         "pool": "Pool",
         "liquidity": "Liquidity",
         "enterAnAmount": "Enter an amount to swap",
-        "continue": "Continue",
         "cancel": "Cancel",
         "from": "From",
         "to": "To",
@@ -408,7 +407,6 @@
         "price": "Price",
         "id": "ID",
         "decimals": "Decimals",
-        "holders": "Holders",
         "limit": "Limit",
         "minitingSupport": "Minting support",
         "tradeable": "Trade-able?",
@@ -431,7 +429,6 @@
         "confirmation": "Are you sure you want to destroy a token?",
         "deleteToken": "Delete token",
         "editToken": "Edit token",
-        "mint": "Mint",
         "notMintedAlert": "You have not minted the token",
         "mint": "Mint"
       },
@@ -460,7 +457,6 @@
         "cancel": "Cancel",
         "continue": "Continue",
         "dfiRequired": "DFI required",
-        "chooseFile": "CHOOSE FILE",
         "dctDistribution": "DCT Distribution",
         "uploadCsv": "UPLOAD CSV",
         "addAddress": "ADD ADDRESS",
@@ -635,7 +631,7 @@
         "receive": "Erhalten",
         "paymentRequests": "Zahlungsanordnungen",
         "noPaymentRequests": "Keine Zahlung Anfragen zur Verfügung",
-        "paginationRange": "%{from} – %{to} von %{total} Zahlungsaufforderung",
+        "paginationRange": "%{to} – %{from} von %{total} Zahlungsaufforderung",
         "transactions": "Transaktionen",
         "availableBalance": "Verfügbares Guthaben",
         "pending": "Ausstehend",
