--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -650,7 +650,7 @@
         "receive": "Receive",
         "paymentRequests": "Payment requests",
         "noPaymentRequests": "No payment requests available",
-        "paginationRange": "%{from} – %{to} of %{total} payment request",
+        "paginationRange": "%{to} – %{from} of %{total} payment request",
         "transactions": "Transactions",
         "availableBalance": "Available balance",
         "pending": "Pending",
