Add language translations

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -200,6 +200,7 @@
         "remove": "Remove",
         "apy": "APY",
         "pooled": "Pooled",
+        "poolShare": "pool share",
         "pooledBTC": "Pooled BTC",
         "btcPoolShare": "BTC pool share",
         "totalReward": "Total reward",
@@ -256,7 +257,8 @@
         "continue": "Continue",
         "swaping": "Swapping",
         "amountInsufficient": "Insufficient Amount in your account",
-        "txHash": "Transaction Hash"
+        "txHash": "Transaction Hash",
+        "somethingWentWrong": "Something went wrong"
       },
       "swapTab": {
         "from": "From",
