Update En and De translation

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -1,8 +1,6 @@
 {
   "components": {
-    "keyValueLi": {
-      "copied": "Copied!"
-    },
+    "keyValueLi": { "copied": "Copied!" },
     "syncStatus": {
       "synchronized": "Synchronized",
       "syncing": "Synchronizing",
@@ -185,10 +183,7 @@
         "successText": "Success",
         "backToMasternodePage": "Back to Masternode Page"
       },
-      "masternodeTab": {
-        "myMasternodes": "Mine",
-        "network": "Network"
-      }
+      "masternodeTab": { "myMasternodes": "Mine", "network": "Network" }
     },
     "tokens": {
       "tokensPage": {
@@ -223,7 +218,7 @@
         }
       },
       "createToken": {
-        "back": "Back",
+        "back": "BACK",
         "yes": "Yes",
         "no": "No",
         "address": "Address",
@@ -263,6 +258,7 @@
         "price": "Price",
         "id": "ID",
         "decimals": "Decimals",
+        "holders": "Holders",
         "limit": "Limit",
         "minitingSupport": "Minting support",
         "tradeable": "Trade-able?",
@@ -270,7 +266,6 @@
         "volume": "Volume (24H)",
         "officialSite": "Official site",
         "transfers": "Transfers",
-        "holders": "Holders",
         "info": "Info",
         "exchange": "Exchange",
         "dex": "DEX",
@@ -328,7 +323,7 @@
       "liquidityPage": {
         "title": "Liquidity – DeFi app",
         "yourLiquidity": "Your liquidity",
-        "yourLiquidityInfo": "You can now liquidity mine for upto 300% APY. Pick a pool pair below, supply liquidity to power the DEX (decentralized Exchange) to start earning fees and anual returns of up to 300%. Withdraw any time.",
+        "yourLiquidityInfo": "You can now liquidity mine for up to 300% APY. Pick a pool pair below, supply liquidity to power the DEX (Decentralized Exchange) to start earning fees and annual returns of up to 300%. You may withdraw at any time.",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
         "loading": "Loading…",
         "watchVideo": "Watch video",
@@ -344,28 +339,29 @@
         "txHash": "Transaction Hash"
       },
       "liquidityInfo": {
-        "title": "Liquidity – DeFi app",
+        "title": "Liquidity – DeFiChain Client",
         "addMore": "Add more",
         "remove": "Remove",
         "apy": "APY",
         "pooled": "Pooled",
-        "poolShare": "pool share",
         "pooledBTC": "Pooled BTC",
         "btcPoolShare": "BTC pool share",
         "totalReward": "Total reward",
         "pooledDFI": "Pooled DFI",
-        "dfiPoolShare": "DFI pool share"
+        "dfiPoolShare": "DFI pool share",
+        "poolShare": "pool share"
       }
     },
     "swap": {
       "swapPage": {
-        "title": "DEX – DeFi app",
+        "title": "DEX – DeFiChain Client",
         "decentralizedExchange": "Decentralized Exchange",
         "decentralizedExchangeInfo": "Welcome to the DefiChain DEX (Decentralized Exchange) - a non-custodial exchange that is completely and truly decentralized.",
         "swap": "Swap",
         "pool": "Pool",
         "liquidity": "Liquidity",
         "enterAnAmount": "Enter an amount to swap",
+        "continue": "Continue",
         "cancel": "Cancel",
         "from": "From",
         "to": "To",
@@ -403,14 +399,11 @@
         "poweredLiquidityPools": "Powered by liquidity pools",
         "poweredLiquidityPoolsInfo": "Swaps are fulfilled via automated liquidity pools, not centralized order books.",
         "swaping": "Swapping",
-        "amountInsufficient": "Insufficient Amount in your account",
+        "amountInsufficient": "Insufficient amount in your account",
         "txHash": "Transaction Hash",
         "somethingWentWrong": "Something went wrong"
       },
-      "swapTab": {
-        "from": "From",
-        "to": "To"
-      },
+      "swapTab": { "from": "From", "to": "To" },
       "poolTab": {
         "yourLiquidity": "Your liquidity",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
@@ -419,8 +412,9 @@
         "liquidity": "Liquidity",
         "volume": "Volume",
         "apy": "APY",
-        "apyTooltipMessage": "APY indicated here only includes DFI incentives, without commission. Actual APY with commission is thus, more",
-        "totalLiquidity": "Total Liquidity ( USD )"
+        "apyTooltipMessage": "APY indicated here only includes DFI incentives, without commission. Actual APY with commission is thus, more.",
+        "totalLiquidity": "Total liquidity (USD)",
+        "addLiquidity": "ADD LIQUIDITY"
       },
       "addLiquidity": {
         "balance": "Balance",
@@ -448,7 +442,7 @@
         "viewOnChain": "View on chain",
         "backToPool": "Back to pool",
         "totalPooled": "Total pooled",
-        "amountInsufficient": "Insufficient Amount in your account"
+        "amountInsufficient": "Insufficient amount in your account"
       },
       "removeLiquidity": {
         "address": "Address",
@@ -522,18 +516,18 @@
     "wallet": {
       "createOrRestoreWalletPage": {
         "title": "Wallet - Create or restore wallet",
-        "loading": "Loading...",
         "createOrRestoreWallet": "Create or restore wallet",
         "createANewWallet": "Create a new wallet",
         "restoreWalletFromMnemonicSeed": "Restore wallet from mnemonic seed",
-        "walletSyncNotice": "You will be able to create or restore a wallet when sync is complete"
+        "walletSyncNotice": "You will be able to create or restore a wallet when sync is complete",
+        "loading": "Loading..."
       },
       "createNewWalletPage": {
         "back": "Back",
         "title": "Wallet - Create a new wallet",
         "createANewWallet": "Create a new wallet",
         "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact numbered order. This 24-word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
-        "mnemonicGuidelineWarning": "Do not store your wallet receovery phrase on a computer or smartphone, and keep it secure.",
+        "mnemonicGuidelineWarning": "Do not store your wallet recovery phrase on a computer or smartphone, and keep it secure.",
         "generateNewSet": "Generate a new set of 24 words",
         "walletRecoveryInfoLine1": "A wallet recovery seed (“mnemonic seed”, “seed phrase”, “seed words”) is a way to represent your private key as a sequence of words that are easier for a human to remember. It is also used to generate extended keys for all the wallets you create in the app.",
         "walletRecoveryInfoLine2": "The words are randomly-generated from a list of 2048 words defined in the BIP39 standard, and provides 24 bit of safety.",
@@ -638,7 +632,6 @@
         "uRI": "URI"
       },
       "walletPage": {
-        "includeRewards": "Include Rewards",
         "tokens": "TOKENS",
         "walletDefiClient": "Wallet – DeFi app",
         "wallet": "Wallet",
@@ -652,6 +645,7 @@
         "availableBalance": "Available balance",
         "pending": "Pending",
         "updateAvailableLabel": "Update available",
+        "includeRewards": "Include Rewards",
         "loading": "Loading...",
         "category": "Category",
         "blockHeight": "BlockHeight",
@@ -674,7 +668,7 @@
         "time": "Time",
         "amount": "Amount",
         "hash": "Hash",
-        "paginationRange": "%{to} – %{from} of %{total} transaction",
+        "paginationRange": "%{from} – %{to} of %{total} transaction",
         "noTransactions": "No transactions available"
       }
     },
@@ -698,10 +692,7 @@
           }
         ]
       },
-      "consoleResultPage": {
-        "resultPage": "CLI result",
-        "back": "Back"
-      }
+      "consoleResultPage": { "resultPage": "CLI result", "back": "Back" }
     }
   },
   "alerts": {
